--- a/Editor/lemoissonneur.VariableReference.Editor.asmdef
+++ b/Editor/lemoissonneur.VariableReference.Editor.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "CobayeStudio.VariableReferenceEditor",
+    "name": "lemoissonneur.VariableReference.Editor",
     "rootNamespace": "",
     "references": [
-        "CobayeStudio.VariableReference",
+        "lemoissonneur.VariableReference.Runtime",
         "Unity.TextMeshPro.Editor"
     ],
     "includePlatforms": [
